2020-02-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use g_print() instead of g_printerr()

	to print network status.
	Fixes https://gitlab.gnome.org/GNOME/balsa/issues/29.

	* src/main-window.c (print_network_status):

2020-02-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main: Save the config files

	* src/main.c (balsa_shutdown_cb): the only case where Balsa must
	  not go through the shutdown procedure is when it is called
	  with the -s/--get-stats option; in that case, nothing has been
	  set up, and balsa-app-destroy would cause all sorts of havoc.

2020-02-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main: Use non-copying GVariant formats

	Since
	https://gitlab.gnome.org/GNOME/glib/-/commit/325f1e3eb54d3969d3be104481fa1097ffa37d7b,
	the GApplication docs recommend using non-copying variant formats.

	* src/main.c
	  (balsa_check_open_mailboxes): use g_free(), not g_strfreev(),
	    to free cmd_line_open_mailboxes, because it is now a shallow copy;
	  (scan_mailboxes_idle_cb): ditto;
	  (balsa_check_open_compose_window): ditto opt_attach_list;
	  (parse_options): ditto remaining_args; use the non-copying formats.

2020-02-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main: Parse command line arguments in the local instance

	* src/main.c
	  (balsa_check_open_compose_window): opt_compose_email must not
	    be free'd; coding style;
	  (parse_options): use the GVariantDict instead of parsing the
	    command-line arguments;
	  (scan_mailboxes_idle_cb): coding style;
	  (balsa_handle_local_options_cb): new function for handling
	    command line options that do not need to be passed to the
	    primary instance (currently just "--version");
	  (balsa_command_line_cb):  use the GVariantDict instead of parsing
	    the command-line arguments;
	  (main): use g_application_add_main_option_entries() and connect
	    to the "handle-local-options" signal.
	  (handle_remote): coding style;
